# lambdacron

./: .gitignore  AGENTS.md  IDEA.md  PLAN.md  main.tf  outputs.tf  pixi.toml  pyproject.toml  variables.tf  versions.tf
.github/: dependabot.yml
.github/workflows/: python-tests.yml
docs/: index.md
docs/explanation/: architecture.md  data-flow.md  lambda-architecture.md
docs/how-to/: set-up-ses-prerequisites.md  set-up-ses.md  use-email-notifications.md  write-lambda-and-templates.md
docs/image-dev/: AWSArchitecture.drawio
docs/understanding/: data-flow.md
examples/basic/: main.tf  variables.tf
examples/basic/email-notifier/: Dockerfile  handler.py
examples/basic/lambda/: Dockerfile  lambda_module.py
examples/basic/print-notifier/: Dockerfile  handler.py
examples/basic/templates/: email-body.html  email-body.txt  email-subject.txt
modules/email-notification/: README.md  main.tf  variables.tf
modules/github-deployer-role/: README.md  main.tf  outputs.tf  variables.tf
modules/github-s3-tfstate-access/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
modules/lambda-image-build/: main.tf  variables.tf
modules/lambda-image-public/: README.md  main.tf  outputs.tf  variables.tf
modules/lambda-image-republish/: main.tf  outputs.tf  variables.tf  versions.tf
modules/notification-plumbing/: README.md  main.tf  outputs.tf  variables.tf
modules/print-notification/: README.md  main.tf  outputs.tf  variables.tf
modules/scheduled-lambda/: README.md  main.tf  outputs.tf  variables.tf
modules/sms-notification/: versions.tf
modules/sns-topics/: main.tf
notification-container/: Dockerfile  lambda.py  main.tf  variables.tf
src/cloud_cron/: lambda_task.py
src/cloud_cron/notifications/: __init__.py  base.py  email_handler.py
src/lambdacron/: lambda_task.py  render.py
src/lambdacron/notifications/: __init__.py  base.py  email_handler.py  print_handler.py
tests/: test_lambda_task.py  test_render.py
tests/notifications/: test_base.py  test_email_handler.py  test_print_handler.py
